--- a/application.properties
+++ b/application.properties
@@ -6,5 +6,5 @@ spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
 spring.h2.console.enabled=true
 
-eureka.client.service.url.defaultZone=http//localhost:8761/eureka
+eureka.client.service.url.defaultZone=http//localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
