--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:clients-bd
 
+spring.cloud.config.discovery.enabled=true
 
 spring.cloud.discovery.enabled=true
 spring.h2.console.enabled=true
