--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:h2:mem:clients-bd
 
-
+management.endpoints.web.exposure.include=*
 
 spring.cloud.discovery.enabled=true
 spring.h2.console.enabled=true
