--- a/application.properties
+++ b/application.properties
@@ -5,5 +5,5 @@ management.endpoints.web.exposure.include=*
 spring.cloud.discovery.enabled=true
 spring.h2.console.enabled=true
 
-eureka.client.service.url.defaultZone=http//localhost:8761/eureka/
+eureka.client.service.url.defaultZone=${DISCOVERY_URL:http//localhost:8761/eureka/}
 
