--- a/application.properties
+++ b/application.properties
@@ -4,6 +4,7 @@ management.endpoints.web.exposure.include=*
 
 spring.cloud.discovery.enabled=true
 spring.h2.console.enabled=true
-
-eureka.client.service.url.defaultZone=${DISCOVERY_URL:http//localhost:8761/eureka/}
+spring.cloud.config.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.service.url.defaultZone=${DISCOVERY_URL:http//localhost:8761/eureka}
 
