--- a/application.properties
+++ b/application.properties
@@ -6,5 +6,5 @@ spring.cloud.discovery.enabled=true
 spring.h2.console.enabled=true
 spring.cloud.config.enabled=true
 eureka.instance.prefer-ip-address=true
-eureka.client.service.url.defaultZone=${DISCOVERY_URL:http//localhost:8761/eureka}
+eureka.client.service.url.defaultZone=${DISCOVERY_URL:http://localhost:8761/eureka/}
 
