--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:h2:mem:clients-bd
 
-management.endpoints.web.exposure.include=*
 
+global.params.p1=7
+global.params.p2=8
 spring.cloud.discovery.enabled=true
-spring.h2.console.enabled=true
 spring.cloud.config.enabled=true
+spring.h2.console.enabled=true
 eureka.instance.prefer-ip-address=true
-eureka.client.service.url.defaultZone=${DISCOVERY_URL:http://localhost:8761/eureka/}
-
+eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
+management.endpoints.web.exposure.include=*
